# COS

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  claude-triage-guide.md
.github/ISSUE_TEMPLATE/: bug_report.md  connector_request.md
.github/workflows/: autofix-automerge.yml  ci-autotriage.yml  ci.yml  docs.yml
architecture/: index.html
cli/: index.html
contract/: index.html
docs/: architecture.md  cli.md  contract.md  index.md  quickstart.md  reference.md  roster.md  symfluence.md
inventory/: providers.yaml
quickstart/: index.html
reference/: index.html
roster/: index.html
search/: search_index.json
src/cos/: __init__.py
src/cos/cli/: __init__.py  main.py
src/cos/connectors/: __init__.py  amsr_swe.py  ascat_sm.py  base.py  canswe_swe.py  chirps_precip.py  cmc_snow_depth.py  cmc_swe.py  cnes_grgs_tws.py  csr_grace.py  daymet_precip.py  ecostress_et.py  ecostress_lst.py  esa_cci_sm.py  fluxnet_et.py  ggmn_gw.py  gldas_tws.py  gleam_et.py  goes_lst.py  gpm_imerg_precip.py  grace.py  gsfc_grace.py  hubeau_waterlevel.py  ims_sca.py  ismn_sm.py  jrc_surface_water.py  mod16_et.py  modis_albedo.py  modis_fapar.py  modis_gpp.py  modis_lai.py  modis_lst.py  modis_ndvi.py  modis_sca.py  mswep_precip.py  norswe_swe.py  oco3_sif.py  openet.py  sentinel1_sm.py  smap_freeze_thaw.py  (+12 more)
src/cos/core/: __init__.py  config.py  exceptions.py  fetch.py  health.py  models.py  reduce.py  registry.py
src/cos/integrations/: __init__.py  symfluence.py
src/cos/scheduler/: __init__.py  tiers.py
symfluence/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_connector_integrity.py  test_fetch.py  test_models.py  test_reduce.py  test_symfluence_integration.py
tests/connectors/: test_amsr_swe.py  test_ascat_sm.py  test_canswe_swe.py  test_chirps_precip.py  test_cmc_snow_depth.py  test_cmc_swe.py  test_cnes_grgs_tws.py  test_csr_grace.py  test_daymet_precip.py  test_ecostress_et.py  test_ecostress_lst.py  test_esa_cci_sm.py  test_fluxnet_et.py  test_ggmn_gw.py  test_gldas_tws.py  test_gleam_et.py  test_goes_lst.py  test_gpm_imerg_precip.py  test_grace.py  test_gsfc_grace.py  test_hubeau_waterlevel.py  test_ims_sca.py  test_ismn_sm.py  test_jrc_surface_water.py  test_mod16_et.py  test_modis_albedo.py  test_modis_fapar.py  test_modis_gpp.py  test_modis_lai.py  test_modis_lst.py  test_modis_ndvi.py  test_modis_sca.py  test_mswep_precip.py  test_norswe_swe.py  test_oco3_sif.py  test_openet.py  test_sentinel1_sm.py  test_smap_freeze_thaw.py  test_smap_sm.py  test_smos_sm.py  (+10 more)
